--- a/Shipment/Web.config
+++ b/Shipment/Web.config
@@ -24,7 +24,7 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules>
-      <!-- to be updated.. -->
+      <!-- to be updated... -->
       <remove name="ApplicationInsightsWebTracking"/>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
         preCondition="managedHandler"/>
